tests/invalid/multiply_star.err_exp
multiply_star.m:020: In clause for predicate `p'/2:
multiply_star.m:020:   error: undefined symbol `*'/2.
